--- a/discover_data_baidu.ipynb
+++ b/discover_data_baidu.ipynb
@@ -93,6 +93,13 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "outputs": [
@@ -174,9 +181,6 @@
     "### Part 2 选择讨论过这些话题的推子和对应用户\n",
     "user_tweet_select = user.copy()\n",
     "key_hashtags = ['#COVID19', '#coronavirus', '#Covid19', '#Covid_19', '#Coronavirus', '#COVID', '#covid19']\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "for i in range(len(user)):\n",
     "    analy_user_tweet = user['tweet'][i]\n",
