--- a/Dataset/twi22/dp21_twi22user_geo.ipynb
+++ b/Dataset/twi22/dp21_twi22user_geo.ipynb
@@ -104,19 +104,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "6f5abefb",
+   "execution_count": null,
+   "id": "fa7a5ce2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "followers = pd.read_csv('followers.csv')\n",
-    "following = pd.read_csv('following.csv')\n",
-    "label = pd.read_csv('twi22/label.csv')"
+    "df.set_index('id', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 81,
    "id": "fe57dad3",
    "metadata": {},
    "outputs": [
@@ -124,14 +122,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Check num of edges:  (2, 412310)\n",
-      "Num of user selected:  63865\n"
+      "Check num of edges:  (2, 1356282)\n",
+      "Num of user selected:  195491\n"
      ]
     }
    ],
    "source": [
     "# example: network in topic 3\n",
-    "tweet = pd.read_csv('topic_tweet3_climate.csv') \n",
+    "tweet = pd.read_csv('topic_tweet1_covid.csv')\n",
+    "#tweet = pd.read_csv('topic_tweet2_war.csv') \n",
+    "#tweet = pd.read_csv('topic_tweet3_climate.csv') \n",
+    "\n",
+    "followers = pd.read_csv('followers.csv')\n",
+    "following = pd.read_csv('following.csv')\n",
+    "label = pd.read_csv('twi22/label.csv')\n",
+    "\n",
     "tweet['uid'] = 'u'+tweet['uid'].astype(str)\n",
     "select_user_id = set(tweet['uid'])&set(label['id'])\n",
     "select_user_id = pd.DataFrame({'select_uid': list(select_user_id)})\n",
@@ -163,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 82,
    "id": "df54931d",
    "metadata": {},
    "outputs": [
@@ -171,8 +176,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Num nodes:  63865 Num edges:  407927\n",
-      "Num nodes:  63865 Num edges:  407927\n"
+      "Num nodes:  195491 Num edges:  1341914\n",
+      "Num nodes:  195491 Num edges:  1341914\n"
      ]
     }
    ],
@@ -194,86 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "68cb6e19",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>location</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>id</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>u1217628182611927040</th>\n",
-       "      <td>Cambridge, MA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>u2664730894</th>\n",
-       "      <td>🎈</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>u1266703520205549568</th>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>u1089159225148882949</th>\n",
-       "      <td>Charlottesville, VA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>u36741729</th>\n",
-       "      <td>United States</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                 location\n",
-       "id                                       \n",
-       "u1217628182611927040        Cambridge, MA\n",
-       "u2664730894                             🎈\n",
-       "u1266703520205549568                 None\n",
-       "u1089159225148882949  Charlottesville, VA\n",
-       "u36741729                   United States"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.set_index('id', inplace=True)\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 85,
    "id": "ed85fa96",
    "metadata": {},
    "outputs": [
@@ -316,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 86,
    "id": "03de0713",
    "metadata": {},
    "outputs": [],
@@ -329,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 87,
    "id": "0c9b61f3",
    "metadata": {},
    "outputs": [],
@@ -348,11 +274,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 88,
    "id": "72941e80",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Human following Human:  0.6041523804723826\n",
+      "Human following Bot:  0.5652196471497054\n",
+      "Human following Human:  0.820962757022726\n",
+      "Bot following Human:  0.7422882747678006\n"
+     ]
+    }
+   ],
    "source": [
+    "'''\n",
+    "-> follow关系\n",
+    "一个假设：location代表一种homophily\n",
+    "计算A->B中，A和B相同trait比例：对比Human→Human和Human→Bot的关系；人们主动选择朋友可能因为homophily，但是选择bot不一定（如果只是为了获取信息等）\n",
+    "计算A->B中，所有B的相似程度：对比Human→Human和Bot→Human的关系；因为Homophily，人follow的朋友们也是相似的，而bot如果随机选择连接，那bot follow的人彼此间应该不是那么相似\n",
+    "'''\n",
+    "\n",
     "def cal_homo_rate(Input_G):\n",
     "    homo_rate = []\n",
     "    for node in Input_G:\n",
@@ -415,6 +359,31 @@
     "\n",
     "print(\"Human following Human: \", np.mean(hfh_neighomo))\n",
     "print(\"Bot following Human: \", np.mean(bfh_neighomo))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "85c20f1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test homo: t= 6.703095420782976  ,p= 2.07204713567771e-11\n",
+      "test neighomo: t= 23.85766324021434  ,p= 1.955294244694884e-124\n"
+     ]
+    }
+   ],
+   "source": [
+    "# t test\n",
+    "from scipy import stats\n",
+    "t1, p1 = stats.ttest_ind(hfh_homo, hfb_homo)\n",
+    "t2, p2 = stats.ttest_ind(hfh_neighomo, bfh_neighomo)\n",
+    "\n",
+    "print(\"test homo: t=\", t1, \" ,p=\", p1)\n",
+    "print(\"test neighomo: t=\", t2, \" ,p=\", p2)"
    ]
   }
  ],
