--- a/Dataset/twi22/dp04_twi22analyze_edge.ipynb
+++ b/Dataset/twi22/dp04_twi22analyze_edge.ipynb
@@ -13,285 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "id": "3a8e1d86",
    "metadata": {},
    "outputs": [],
    "source": [
     "followers = pd.read_csv('followers.csv')\n",
-    "following = pd.read_csv('following.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "0c000538",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "followers    1116655\n",
-      "Name: relation, dtype: int64\n",
-      "following    2626979\n",
-      "Name: relation, dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(followers['relation'].value_counts())\n",
-    "print(following['relation'].value_counts())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "1caef3c9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>source_id</th>\n",
-       "      <th>relation</th>\n",
-       "      <th>target_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>u980749991491682304</td>\n",
-       "      <td>followers</td>\n",
-       "      <td>u1480979504696864775</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>u2704715387</td>\n",
-       "      <td>followers</td>\n",
-       "      <td>u1483909830159085571</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>u753165526566899713</td>\n",
-       "      <td>followers</td>\n",
-       "      <td>u1484420078</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>u114820052</td>\n",
-       "      <td>followers</td>\n",
-       "      <td>u18876842</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>u1924484352</td>\n",
-       "      <td>followers</td>\n",
-       "      <td>u3408319427</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             source_id   relation             target_id\n",
-       "0  u980749991491682304  followers  u1480979504696864775\n",
-       "1          u2704715387  followers  u1483909830159085571\n",
-       "2  u753165526566899713  followers           u1484420078\n",
-       "3           u114820052  followers             u18876842\n",
-       "4          u1924484352  followers           u3408319427"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "followers.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "46a01a1a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>source_id</th>\n",
-       "      <th>relation</th>\n",
-       "      <th>target_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>u105387876</td>\n",
-       "      <td>following</td>\n",
-       "      <td>u402576793</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>u148520716</td>\n",
-       "      <td>following</td>\n",
-       "      <td>u59653593</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>u1276438425457967110</td>\n",
-       "      <td>following</td>\n",
-       "      <td>u1389155636693381120</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>u1445432327367237638</td>\n",
-       "      <td>following</td>\n",
-       "      <td>u848348952084828160</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>u1445432327367237638</td>\n",
-       "      <td>following</td>\n",
-       "      <td>u850507814023942144</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              source_id   relation             target_id\n",
-       "0            u105387876  following            u402576793\n",
-       "1            u148520716  following             u59653593\n",
-       "2  u1276438425457967110  following  u1389155636693381120\n",
-       "3  u1445432327367237638  following   u848348952084828160\n",
-       "4  u1445432327367237638  following   u850507814023942144"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "following.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "7e973d57",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>u1217628182611927040</td>\n",
-       "      <td>human</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>u2664730894</td>\n",
-       "      <td>human</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>u1266703520205549568</td>\n",
-       "      <td>human</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>u1089159225148882949</td>\n",
-       "      <td>human</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>u36741729</td>\n",
-       "      <td>bot</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     id  label\n",
-       "0  u1217628182611927040  human\n",
-       "1           u2664730894  human\n",
-       "2  u1266703520205549568  human\n",
-       "3  u1089159225148882949  human\n",
-       "4             u36741729    bot"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "label = pd.read_csv('twi22/label.csv')\n",
-    "label.head()"
+    "following = pd.read_csv('following.csv')\n",
+    "label = pd.read_csv('twi22/label.csv')"
    ]
   },
   {
@@ -304,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "id": "76673266",
    "metadata": {},
    "outputs": [
@@ -336,28 +65,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>u763596433534496768</td>\n",
-       "      <td>@spbail Is this post-Covid lethargy? I’m so sc...</td>\n",
+       "      <td>u2838934563</td>\n",
+       "      <td>RT @Everton: The Club, players and fans are to...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>u1291883446307037187</td>\n",
-       "      <td>https://t.co/tKm8HtIAlS\\n\\nHealth Canada autho...</td>\n",
+       "      <td>u2838934563</td>\n",
+       "      <td>RT @TheAthleticUK: Everton players line up dra...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>u1291883446307037187</td>\n",
-       "      <td>https://t.co/OANVXAlvDU\\n\\nA team of internati...</td>\n",
+       "      <td>u763596433534496768</td>\n",
+       "      <td>@IgorBrigadir @yoavgo I think this is more abo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>u1291883446307037187</td>\n",
-       "      <td>https://t.co/IZm3Rttpw9\\n\\nJesus is the Truth ...</td>\n",
+       "      <td>https://t.co/gBgXkNDcEd\\n\\nThe self-proclaimed...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>u1291883446307037187</td>\n",
-       "      <td>https://t.co/RUjr0MJgFw\\n\\n(CNN)The world coul...</td>\n",
+       "      <td>https://t.co/Naqs2n5bx0\\nThe wider region is l...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -365,14 +94,14 @@
       ],
       "text/plain": [
        "                    uid                                              tweet\n",
-       "0   u763596433534496768  @spbail Is this post-Covid lethargy? I’m so sc...\n",
-       "1  u1291883446307037187  https://t.co/tKm8HtIAlS\\n\\nHealth Canada autho...\n",
-       "2  u1291883446307037187  https://t.co/OANVXAlvDU\\n\\nA team of internati...\n",
-       "3  u1291883446307037187  https://t.co/IZm3Rttpw9\\n\\nJesus is the Truth ...\n",
-       "4  u1291883446307037187  https://t.co/RUjr0MJgFw\\n\\n(CNN)The world coul..."
+       "0           u2838934563  RT @Everton: The Club, players and fans are to...\n",
+       "1           u2838934563  RT @TheAthleticUK: Everton players line up dra...\n",
+       "2   u763596433534496768  @IgorBrigadir @yoavgo I think this is more abo...\n",
+       "3  u1291883446307037187  https://t.co/gBgXkNDcEd\\n\\nThe self-proclaimed...\n",
+       "4  u1291883446307037187  https://t.co/Naqs2n5bx0\\nThe wider region is l..."
       ]
      },
-     "execution_count": 9,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "id": "e6b6a2db",
    "metadata": {},
    "outputs": [
@@ -397,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "269623\n"
+      "277467\n"
      ]
     },
     {
@@ -427,23 +156,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>u91032331</td>\n",
+       "      <td>u1343522204043128832</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>u110830686</td>\n",
+       "      <td>u137424427</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>u1256595851859726337</td>\n",
+       "      <td>u15995577</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>u706621126</td>\n",
+       "      <td>u93946167</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>u41090635</td>\n",
+       "      <td>u1122773861228060672</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -451,14 +180,14 @@
       ],
       "text/plain": [
        "             select_uid\n",
-       "0             u91032331\n",
-       "1            u110830686\n",
-       "2  u1256595851859726337\n",
-       "3            u706621126\n",
-       "4             u41090635"
+       "0  u1343522204043128832\n",
+       "1            u137424427\n",
+       "2             u15995577\n",
+       "3             u93946167\n",
+       "4  u1122773861228060672"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "id": "91afe54d",
    "metadata": {},
    "outputs": [
@@ -480,7 +209,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "339849 1016433\n"
+      "Check num of edges:  (2, 800554)\n",
+      "Num of user selected:  157029\n"
      ]
     }
    ],
@@ -511,8 +241,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6358ced8",
+   "metadata": {},
+   "source": [
+    "## Network Analysis"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "id": "c33d9ee2",
    "metadata": {},
    "outputs": [
@@ -520,14 +258,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Num nodes:  195491\n",
-      "Num edges:  1341914\n"
+      "Num nodes:  157029 Num edges:  796236\n",
+      "Num nodes:  157029 Num edges:  796236\n",
+      "{'human': 150595, 'bot': 6434}\n"
      ]
     }
    ],
    "source": [
     "# Using networkx for network data analysis\n",
     "import networkx as nx\n",
+    "from collections import Counter\n",
+    "\n",
     "G = nx.DiGraph()\n",
     "# add the edges (directed)\n",
     "for e in range(len(edges[0])):\n",
@@ -538,13 +279,16 @@
     "label.set_index('id', inplace=True)\n",
     "for node_id in G.nodes():\n",
     "    G.add_nodes_from([(node_id, {'label': label.loc[node_id, 'label']})])\n",
-    "print(\"Num nodes: \", len(G.nodes))\n",
-    "print(\"Num edges: \", len(G.edges))"
+    "print(\"Num nodes: \", len(G.nodes), \"Num edges: \", len(G.edges))\n",
+    "\n",
+    "label_counts = Counter(nx.get_node_attributes(G, 'label').values())\n",
+    "\n",
+    "print(dict(label_counts))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 40,
    "id": "dd41a009",
    "metadata": {},
    "outputs": [
@@ -554,20 +298,20 @@
      "text": [
       "Node degree stat:        Degree  Node Count\n",
       "0          0           0\n",
-      "1          1       53027\n",
-      "2          2       37302\n",
-      "3          3       20313\n",
-      "4          4       14295\n",
+      "1          1       48816\n",
+      "2          2       32292\n",
+      "3          3       17487\n",
+      "4          4       12072\n",
       "...      ...         ...\n",
-      "1163    1163           0\n",
-      "1164    1164           0\n",
-      "1165    1165           0\n",
-      "1166    1166           0\n",
-      "1167    1167           1\n",
+      "1035    1035           0\n",
+      "1036    1036           0\n",
+      "1037    1037           1\n",
+      "1038    1038           0\n",
+      "1039    1039           1\n",
       "\n",
-      "[1168 rows x 2 columns]\n",
-      "Ave in-degree of human (7.1490) and bot (3.0872)\n",
-      "Ave out-degree of human (6.9373) and bot (5.8961)\n"
+      "[1040 rows x 2 columns]\n",
+      "Ave in-degree of human (5.1664) and bot (2.8283)\n",
+      "Ave out-degree of human (5.0497) and bot (5.5609)\n"
      ]
     }
    ],
@@ -592,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 41,
    "id": "6d27dae5",
    "metadata": {},
    "outputs": [
@@ -600,10 +344,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Human following Human:  1222850\n",
-      "Human following Bot:  38282\n",
-      "Bot following Human:  76766\n",
-      "Bot following Bot:  4016\n"
+      "Human following Human:  743707\n",
+      "Human following Bot:  16750\n",
+      "Bot following Human:  34332\n",
+      "Bot following Bot:  1447\n"
      ]
     }
    ],
@@ -617,6 +361,18 @@
     "print(\"Human following Bot: \", G_HfollowingB.number_of_edges())\n",
     "print(\"Bot following Human: \", G_BfollowingH.number_of_edges())\n",
     "print(\"Bot following Bot: \", G_BfollowingB.number_of_edges())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "0e1eba15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#nx.write_gpickle(G, 'topic_tweet1_covid.pkl')\n",
+    "nx.write_gpickle(G, 'topic_tweet2_war.pkl') \n",
+    "#nx.write_gpickle(G, 'topic_tweet3_climate.pkl')"
    ]
   }
  ],
