--- a/empirical.ipynb
+++ b/empirical.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "1be7cf7e",
    "metadata": {
     "pycharm": {
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# topic 1 pos\n",
@@ -37,13 +37,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "0    34169\n1     2460\nName: Label, dtype: int64"
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -86,7 +86,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "59496 1782\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(analysis[analysis['Treat']==-1]), len(analysis[analysis['Treat']==1]))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "# topic 1 neg\n",
@@ -105,13 +127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
       "text/plain": "0    17553\n1     1038\nName: Label, dtype: int64"
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -144,6 +166,28 @@
     "# average opinion\n",
     "print(analysis[analysis['Treat']==-1]['outcome'].mean())\n",
     "print(analysis[analysis['Treat']==1]['outcome'].mean())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34170 925\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(analysis[analysis['Treat']==-1]), len(analysis[analysis['Treat']==1]))"
    ],
    "metadata": {
     "collapsed": false,
