--- a/empirical+vis.ipynb
+++ b/empirical+vis.ipynb
@@ -534,6 +534,50 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t统计量: 3.441549403260464\n",
+      "p值: 0.002910779896379889\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy import stats\n",
+    "import numpy as np\n",
+    "\n",
+    "# 给定两组数据的均值和标准差\n",
+    "mean1, mean2 = 0.6044, 0.6027\n",
+    "std1, std2 = 0.0010, 0.0012\n",
+    "\n",
+    "# 给定样本大小\n",
+    "n1, n2 = 10, 10\n",
+    "\n",
+    "# 计算自由度\n",
+    "df = n1 + n2 - 2\n",
+    "\n",
+    "# 计算 t 统计量\n",
+    "pooled_std = np.sqrt(((n1 - 1) * std1**2 + (n2 - 1) * std2**2) / df)\n",
+    "t_stat = (mean1 - mean2) / (pooled_std * np.sqrt(1/n1 + 1/n2))\n",
+    "\n",
+    "# 计算 p 值\n",
+    "p_val = 2 * (1 - stats.t.cdf(np.abs(t_stat), df))\n",
+    "\n",
+    "print(f\"t统计量: {t_stat}\")\n",
+    "print(f\"p值: {p_val}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
