--- a/Dataset/twi22/dp05_twi22raw_to_traindt.ipynb
+++ b/Dataset/twi22/dp05_twi22raw_to_traindt.ipynb
@@ -145,9 +145,9 @@
     "    exist_both = exist_1 and exist_2\n",
     "\n",
     "    if exist_1 and not exist_both:\n",
-    "        return -1, prop # treat\n",
+    "        return 1, prop # control (human inf)\n",
     "    elif exist_2 and not exist_both:\n",
-    "        return 1, prop # control\n",
+    "        return -1, prop # treat (bot inf)\n",
     "    else:\n",
     "        return 0, prop\n",
     "\n",
