--- a/empirical+vis.ipynb
+++ b/empirical+vis.ipynb
@@ -37,13 +37,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "0    34169\n1     2460\nName: Label, dtype: int64"
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,22 +61,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Treat (human prop):  0.14865584072878865\n",
-      "Control (bot prop):  0.20524876543209897\n",
-      "Num treat/control:  59496 1782\n"
+      "Treat (bot prop):  0.20524876543209897\n",
+      "Control (human prop):  0.14865584072878865\n",
+      "Num treat/control:  1782 59496\n"
      ]
     }
    ],
    "source": [
     "# average opinion\n",
-    "print(\"Treat (human prop): \", analysis[analysis['Treat']==-1]['outcome'].mean())\n",
-    "print(\"Control (bot prop): \", analysis[analysis['Treat']==1]['outcome'].mean())\n",
+    "print(\"Treat (bot prop): \", analysis[analysis['Treat']==-1]['outcome'].mean())\n",
+    "print(\"Control (human prop): \", analysis[analysis['Treat']==1]['outcome'].mean())\n",
     "print(\"Num treat/control: \", len(analysis[analysis['Treat']==-1]), len(analysis[analysis['Treat']==1]))"
    ],
    "metadata": {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "# topic 1 neg\n",
@@ -140,13 +140,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "0    17553\n1     1038\nName: Label, dtype: int64"
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,22 +164,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Treat (human prop):  0.06156433421129566\n",
-      "Control (bot prop):  0.003165189189189204\n",
-      "Num treat/control:  34170 925\n"
+      "Treat (bot prop):  0.003165189189189204\n",
+      "Control (human prop):  0.06156433421129566\n",
+      "Num treat/control:  925 34170\n"
      ]
     }
    ],
    "source": [
     "# average opinion\n",
-    "print(\"Treat (human prop): \", analysis[analysis['Treat']==-1]['outcome'].mean())\n",
-    "print(\"Control (bot prop): \",analysis[analysis['Treat']==1]['outcome'].mean())\n",
+    "print(\"Treat (bot prop): \", analysis[analysis['Treat']==-1]['outcome'].mean())\n",
+    "print(\"Control (human prop): \",analysis[analysis['Treat']==1]['outcome'].mean())\n",
     "print(\"Num treat/control: \", len(analysis[analysis['Treat']==-1]), len(analysis[analysis['Treat']==1]))"
    ],
    "metadata": {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "# topic 2 pos\n",
@@ -210,13 +210,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
       "text/plain": "0    19922\n1      777\nName: Label, dtype: int64"
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,22 +234,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Treat (human prop):  -0.1126987842541295\n",
-      "Control (bot prop):  -0.08393858974358975\n",
-      "Num treat/control:  20399 780\n"
+      "Treat (bot prop):  -0.08393858974358975\n",
+      "Control (human prop):  -0.1126987842541295\n",
+      "Num treat/control:  780 20399\n"
      ]
     }
    ],
    "source": [
     "# average opinion\n",
-    "print(\"Treat (human prop): \", analysis[analysis['Treat']==-1]['outcome'].mean())\n",
-    "print(\"Control (bot prop): \",analysis[analysis['Treat']==1]['outcome'].mean())\n",
+    "print(\"Treat (bot prop): \", analysis[analysis['Treat']==-1]['outcome'].mean())\n",
+    "print(\"Control (human prop): \",analysis[analysis['Treat']==1]['outcome'].mean())\n",
     "print(\"Num treat/control: \", len(analysis[analysis['Treat']==-1]), len(analysis[analysis['Treat']==1]))"
    ],
    "metadata": {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "# topic 2 neg\n",
@@ -313,13 +313,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "outputs": [
     {
      "data": {
       "text/plain": "0    40701\n1     1267\nName: Label, dtype: int64"
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,22 +337,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Treat (human prop):  -0.1750625938364274\n",
-      "Control (bot prop):  -0.26813522267206474\n",
-      "Num treat/control:  30372 494\n"
+      "Treat (bot prop):  -0.26813522267206474\n",
+      "Control (human prop):  -0.1750625938364274\n",
+      "Num treat/control:  494 30372\n"
      ]
     }
    ],
    "source": [
     "# average opinion\n",
-    "print(\"Treat (human prop): \", analysis[analysis['Treat']==-1]['outcome'].mean())\n",
-    "print(\"Control (bot prop): \",analysis[analysis['Treat']==1]['outcome'].mean())\n",
+    "print(\"Treat (bot prop): \", analysis[analysis['Treat']==-1]['outcome'].mean())\n",
+    "print(\"Control (human prop): \",analysis[analysis['Treat']==1]['outcome'].mean())\n",
     "print(\"Num treat/control: \", len(analysis[analysis['Treat']==-1]), len(analysis[analysis['Treat']==1]))"
    ],
    "metadata": {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "# topic 3 pos\n",
@@ -383,13 +383,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "outputs": [
     {
      "data": {
       "text/plain": "0    13377\n1      736\nName: Label, dtype: int64"
      },
-     "execution_count": 35,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,22 +407,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Treat (human prop):  0.21751235379235387\n",
-      "Control (bot prop):  0.1537042813455658\n",
-      "Num treat/control:  16586 327\n"
+      "Treat (bot prop):  0.1537042813455658\n",
+      "Control (human prop):  0.21751235379235387\n",
+      "Num treat/control:  327 16586\n"
      ]
     }
    ],
    "source": [
     "# average opinion\n",
-    "print(\"Treat (human prop): \", analysis[analysis['Treat']==-1]['outcome'].mean())\n",
-    "print(\"Control (bot prop): \",analysis[analysis['Treat']==1]['outcome'].mean())\n",
+    "print(\"Treat (bot prop): \", analysis[analysis['Treat']==-1]['outcome'].mean())\n",
+    "print(\"Control (human prop): \",analysis[analysis['Treat']==1]['outcome'].mean())\n",
     "print(\"Num treat/control: \", len(analysis[analysis['Treat']==-1]), len(analysis[analysis['Treat']==1]))"
    ],
    "metadata": {
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "outputs": [
     {
      "data": {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "# topic 3 neg\n",
@@ -486,13 +486,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "outputs": [
     {
      "data": {
       "text/plain": "0    4945\n1     227\nName: Label, dtype: int64"
      },
-     "execution_count": 39,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,22 +510,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Treat (human prop):  0.11887295113019326\n",
-      "Control (bot prop):  0.19528724035608303\n",
-      "Num treat/control:  7919 337\n"
+      "Treat (bot prop):  0.19528724035608303\n",
+      "Control (human prop):  0.11887295113019326\n",
+      "Num treat/control:  337 7919\n"
      ]
     }
    ],
    "source": [
     "# average opinion\n",
-    "print(\"Treat (human prop): \", analysis[analysis['Treat']==-1]['outcome'].mean())\n",
-    "print(\"Control (bot prop): \", analysis[analysis['Treat']==1]['outcome'].mean())\n",
+    "print(\"Treat (bot prop): \", analysis[analysis['Treat']==-1]['outcome'].mean())\n",
+    "print(\"Control (human prop): \", analysis[analysis['Treat']==1]['outcome'].mean())\n",
     "print(\"Num treat/control: \", len(analysis[analysis['Treat']==-1]), len(analysis[analysis['Treat']==1]))"
    ],
    "metadata": {
@@ -572,6 +572,18 @@
     "print(f\"t统计量: {t_stat}\")\n",
     "print(f\"p值: {p_val}\")"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
